--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	</tr>
 	<tr>
 		<td colspan="3">
-			<a href="https://parkjuhyun-624.github.io/index/">
+			<a href="https://parkjuhyun-624.github.io/index/" target="block">
 				<img src="images/QnA_02.jpg" width="1320" height="89" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td colspan="2">
-			<a href="https://parkjuhyun-624.github.io/index/">
+			<a href="https://parkjuhyun-624.github.io/index/" target="block">
 				<img src="images/QnA_03.jpg" width="215" height="86" border="0" alt=""></a></td>
 		<td rowspan="6">
 			<img src="images/index_04.jpg" width="1105" height="1040" alt=""></td>
@@ -30,7 +30,7 @@
 		<td rowspan="2">
 			<img src="images/index_06.jpg" width="1" height="418" alt=""></td>
 		<td>
-			<a href="https://parkjuhyun-624.github.io/hospital/">
+			<a href="https://parkjuhyun-624.github.io/hospital/" target="block">
 				<img src="images/QnA_07.jpg" width="214" height="53" border="0" alt=""></a></td>
 	</tr>
 	<tr>
@@ -39,7 +39,7 @@
 	</tr>
 	<tr>
 		<td colspan="2">
-			<a href="https://parkjuhyun-624.github.io/QnA/">
+			<a href="https://parkjuhyun-624.github.io/QnA/" target="block">
 				<img src="images/QnA_09.jpg" width="215" height="62" border="0" alt=""></a></td>
 	</tr>
 	<tr>
