--- a/index.html
+++ b/index.html
@@ -1,50 +1,183 @@
 <html>
 <head>
-<title>QnA</title>
+<title>qna</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<!-- Save for Web Slices (QnA.psd) -->
-<table id="__01" width="1320" height="1174" border="0" cellpadding="0" cellspacing="0">
-	<tr>
-		<td colspan="3">
-			<img src="images/index_01.jpg" width="1320" height="45" alt=""></td>
-	</tr>
-	<tr>
-		<td colspan="3">
-			<a href="https://parkjuhyun-624.github.io/index/" target="block">
-				<img src="images/QnA_02.jpg" width="1320" height="89" border="0" alt=""></a></td>
-	</tr>
+<!-- Save for Web Slices (qna.psd) -->
+<table id="__01" width="1322" height="1179" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td colspan="2">
-			<a href="https://parkjuhyun-624.github.io/index/" target="block">
-				<img src="images/QnA_03.jpg" width="215" height="86" border="0" alt=""></a></td>
-		<td rowspan="6">
-			<img src="images/index_04.jpg" width="1105" height="1040" alt=""></td>
+			<img src="images/index_01.jpg" width="760" height="47" alt=""></td>
+		<td>
+			<a href="https://y1ix3o.github.io/log/">
+				<img src="images/qna_02.jpg" width="82" height="47" border="0" alt=""></a></td>
+		<td>
+			<a href="https://y1ix3o.github.io/member/">
+				<img src="images/qna_03.jpg" width="114" height="47" border="0" alt=""></a></td>
+		<td>
+			<a href="https://parkjuhyun-624.github.io/buy/">
+				<img src="images/qna_04.jpg" width="111" height="47" border="0" alt=""></a></td>
+		<td colspan="2">
+			<a href="https://parkjuhyun-624.github.io/list/">
+				<img src="images/qna_05.jpg" width="121" height="47" border="0" alt=""></a></td>
+		<td>
+			<a href="https://yunsubin714.github.io/gggg/">
+				<img src="images/qna_06.jpg" width="132" height="47" border="0" alt=""></a></td>
+		<td rowspan="19">
+			<img src="images/index_07.jpg" width="1" height="1178" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="47" alt=""></td>
 	</tr>
 	<tr>
-		<td colspan="2">
-			<img src="images/index_05.jpg" width="215" height="182" alt=""></td>
+		<td colspan="8">
+			<a href="https://parkjuhyun-624.github.io/index/">
+				<img src="images/qna_08.jpg" width="1320" height="86" border="0" alt=""></a></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="86" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="images/index_09.jpg" width="214" height="1" alt=""></td>
+		<td colspan="7" rowspan="7">
+			<img src="images/index_10.jpg" width="1106" height="391" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="1" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://parkjuhyun-624.github.io/index/">
+				<img src="images/qna_11.jpg" width="214" height="84" border="0" alt=""></a></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="84" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://parkjuhyun-624.github.io/hospital/">
+				<img src="images/qna_12.jpg" width="214" height="64" border="0" alt=""></a></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="64" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://kmj037.github.io/care/">
+				<img src="images/qna_13.jpg" width="214" height="57" border="0" alt=""></a></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="57" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://s2vyx.github.io/taxi/">
+				<img src="images/qna_14.jpg" width="214" height="57" border="0" alt=""></a></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="57" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://parkjuhyun-624.github.io/hospital/">
+				<img src="images/qna_15.jpg" width="214" height="61" border="0" alt=""></a></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="61" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://yunsubin714.github.io/aaaa/">
+				<img src="images/qna_16.jpg" width="214" height="67" border="0" alt=""></a></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="67" alt=""></td>
 	</tr>
 	<tr>
 		<td rowspan="2">
-			<img src="images/index_06.jpg" width="1" height="418" alt=""></td>
+			<a href="https://y1ix3o.github.io/talk/">
+				<img src="images/qna_17.jpg" width="214" height="62" border="0" alt=""></a></td>
+		<td colspan="5" rowspan="10">
+			<img src="images/index_18.jpg" width="882" height="654" alt=""></td>
+		<td colspan="2">
+			<a href="https://kmj037.github.io/notice/">
+				<img src="images/qna_19.jpg" width="224" height="37" border="0" alt=""></a></td>
 		<td>
-			<a href="https://parkjuhyun-624.github.io/hospital/" target="block">
-				<img src="images/QnA_07.jpg" width="214" height="53" border="0" alt=""></a></td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="37" alt=""></td>
 	</tr>
 	<tr>
+		<td colspan="2" rowspan="2">
+			<a href="https://kmj037.github.io/event/">
+				<img src="images/qna_20.jpg" width="224" height="33" border="0" alt=""></a></td>
 		<td>
-			<img src="images/index_08.jpg" width="214" height="365" alt=""></td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="25" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="3">
+			<img src="images/index_21.jpg" width="214" height="61" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="8" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="2">
-			<a href="https://parkjuhyun-624.github.io/QnA/" target="block">
-				<img src="images/QnA_09.jpg" width="215" height="62" border="0" alt=""></a></td>
+			<a href="https://kmj037.github.io/question/">
+				<img src="images/qna_22.jpg" width="224" height="37" border="0" alt=""></a></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="37" alt=""></td>
 	</tr>
 	<tr>
-		<td colspan="2">
-			<img src="images/index_10.jpg" width="215" height="292" alt=""></td>
+		<td colspan="2" rowspan="6">
+			<img src="images/index_23.jpg" width="224" height="547" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="16" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://s2vyx.github.io/people/">
+				<img src="images/qna_24.jpg" width="214" height="56" border="0" alt=""></a></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="56" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://s2vyx.github.io/storage/">
+				<img src="images/qna_25.jpg" width="214" height="59" border="0" alt=""></a></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="59" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://yunsubin714.github.io/ffff/">
+				<img src="images/qna_26.jpg" width="214" height="60" border="0" alt=""></a></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="60" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://parkjuhyun-624.github.io/qna/">
+				<img src="images/qna_27.jpg" width="214" height="55" border="0" alt=""></a></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="55" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="images/index_28.jpg" width="214" height="301" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="301" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="214" height="1" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="546" height="1" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="82" height="1" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="114" height="1" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="111" height="1" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="29" height="1" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="92" height="1" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="132" height="1" alt=""></td>
+		<td>
+			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="1" alt=""></td>
+		<td></td>
 	</tr>
 </table>
 <!-- End Save for Web Slices -->
