--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	</tr>
 	<tr>
 		<td>
-			<a href="https://s2vyx.github.io/taxi/">
+			<a href="https://s2vyx.github.io/rtaxi/">
 				<img src="images/qna_14.jpg" width="214" height="57" border="0" alt=""></a></td>
 		<td>
 			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="57" alt=""></td>
@@ -126,14 +126,14 @@
 	</tr>
 	<tr>
 		<td>
-			<a href="https://s2vyx.github.io/people/">
+			<a href="https://s2vyx.github.io/rrpeople/">
 				<img src="images/qna_24.jpg" width="214" height="56" border="0" alt=""></a></td>
 		<td>
 			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="56" alt=""></td>
 	</tr>
 	<tr>
 		<td>
-			<a href="https://s2vyx.github.io/storage/">
+			<a href="https://s2vyx.github.io/rstorage/">
 				<img src="images/qna_25.jpg" width="214" height="59" border="0" alt=""></a></td>
 		<td>
 			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="1" height="59" alt=""></td>
